De buttons toegevoegd en de plaatjes en gestyled.

--- a/buttons-template/buttons.html
+++ b/buttons-template/buttons.html
@@ -6,6 +6,19 @@
    <link rel="stylesheet" type="text/css" href="buttons.css">
 </head>
 <body>
+
+   <div class="container">
+      <button id="button1" onclick="waarde0()" type="button" value="0">0</button>
+      <button id="button2" onclick="waarde1()" type="button">0</button>
+      <button id="button3" onclick="waarde2()" type="button">0</button>
+
+      <div class="waardestyle">
+         <img id="image1" src="images/bg0.jpg" alt="waarde">
+         <img id="image2" src="images/0.jpg" alt="waarde2">
+      </div>
+
+   </div>
+  
   	<script src="buttons.js"></script>
  </body>
 </html>
