Heb de onclick waardes weggehaald.

--- a/buttons-template/buttons.html
+++ b/buttons-template/buttons.html
@@ -8,9 +8,9 @@
 <body>
 
    <div class="container">
-      <button id="button1" onclick="waarde0()" type="button" value="0">0</button>
-      <button id="button2" onclick="waarde1()" type="button">0</button>
-      <button id="button3" onclick="waarde2()" type="button">0</button>
+      <button id="button1"  type="button">0</button>
+      <button id="button2"  type="button">0</button>
+      <button id="button3"  type="button">0</button>
 
       <div class="waardestyle">
          <img id="image1" src="images/bg0.jpg" alt="waarde">
